Tests feature & UserProfile methods
